--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "scripts": {
-    "dev":"npx @tailwindcss/cli -i ./root/css/input.css -o ./root/css/output.css --watch"
+    "dev":"npx @tailwindcss/cli -i ./docs/css/input.css -o ./docs/css/output.css --watch"
   },
   "dependencies": {
     "@tailwindcss/cli": "^4.1.6",
